--- a/storm_web/iml300/assignments/WEEK2.HTML
+++ b/storm_web/iml300/assignments/WEEK2.HTML
@@ -14,7 +14,7 @@
     <div>
         <h3>1. Good Typography</h3>        
         <a href="https://www.bigcartel.com/">
-            <img src="classesfall2016/iml300/assignments/images/goodtextography" alt="good typography">
+            <img src="classesfall2016/iml300/assignments/images/goodtextography.jpeg" alt="good typography">
         </a>
         <p>
             Big Cartel has created a beautiful homepage, that includes still images and video. It is casual, yet clean and professional, and everything is very easy to locate. 
@@ -29,7 +29,7 @@
     <div>
         <h3>2. Bad Typography</h3>        
         <a href="http://www.roverp6cars.com/">
-            <img src="classesfall2016/iml300/assignments/images/badtextography" alt="bad typography">
+            <img src="classesfall2016/iml300/assignments/images/badtextography.jpeg" alt="bad typography">
         </a>
         <p>
             MGBD Parts and Services website is just ugly. It has weird flashing captions, and an annoying font. It makes their website look cheap and ugly. 
