--- a/storm_web/assignments/week2_goodbadinnovative.html
+++ b/storm_web/assignments/week2_goodbadinnovative.html
@@ -3,6 +3,36 @@
 <head>
     <title>NOELLE BRIMBLE- HW1 - The good, the bad, the ugly</title>    
 </head>
+
+   <style>
+    body:before {
+      content: '';
+position: absolute;
+        width: 100%;
+        height: 20%;
+        top:0%;
+        left: 0%;
+        background:#fcd4fb;
+        z-index: -1;
+    }
+   
+    h1{
+        color: #cc84ca;
+        text-align: center;
+    }
+       h2{color: #cc84ca;
+           text-align: center;
+       }
+    
+    h3 {color:#cc84ca;
+        font-size: 25px;
+        text-align: center;
+         }
+   
+    </style>
+
+
+
 <body>    
     <h1>Website Critique</h1>
     <h2>Typography</h2>
@@ -14,7 +44,7 @@
     <div>
         <h3>1. Good Typography</h3>        
         <a href="https://www.bigcartel.com/">
-            <img src="classesfall2016/iml300/assignments/images/goodtextography.jpeg" alt="good typography">
+            <img src="iml300_storm_mostupdated/storm_web/iml300/images/good_textography.png" alt="good typography">
         </a>
         <p>
             Big Cartel has created a beautiful homepage, that includes still images and video. It is casual, yet clean and professional, and everything is very easy to locate. 
@@ -29,7 +59,7 @@
     <div>
         <h3>2. Bad Typography</h3>        
         <a href="http://www.roverp6cars.com/">
-            <img src="classesfall2016/iml300/assignments/images/badtextography.jpeg" alt="bad typography">
+            <img src="iml300_storm_mostupdated/storm_web/iml300/images/bad_textography.png "alt="bad typography">
         </a>
         <p>
             MGBD Parts and Services website is just ugly. It has weird flashing captions, and an annoying font. It makes their website look cheap and ugly. 
