Changes made for midterm
Updated at 9:38pm on 10/4/16
Final changes for midterm due on 10/6/16

--- a/storm_web/assignments/assignments_landing_page.html
+++ b/storm_web/assignments/assignments_landing_page.html
@@ -44,10 +44,10 @@ position: absolute;
 
  <ul>
 
-  <li><a href="#week2_goodbadinnovative.html">
+  <li><a href="week2_goodbadinnovative.html">
   Week 2: The Good, The Bad, And The Innovative</a></li>
-  <li><a href="#week3_constitution_markup.html">Week 3: Constitution Mark Up</a></li>
- <li><a href="about.html">About</a></li>
+  <li><a href="constitution.html">Week 3: Constitution Mark Up</a></li>
+  <li><a href="week6_homework.html">Week 6: My First Flow Chart</a></li>
 </ul>
     
 
