--- a/storm_web/assignments/week2_goodbadinnovative.html
+++ b/storm_web/assignments/week2_goodbadinnovative.html
@@ -44,7 +44,7 @@ position: absolute;
     <div>
         <h3>1. Good Typography</h3>        
         <a href="https://www.bigcartel.com/">
-            <img src="iml300_storm_mostupdated/storm_web/iml300/images/good_textography.png" alt="good typography">
+            <img src="../images/good_typography.png" alt="good typography" style="width: 800px" "height:800px">
         </a>
         <p>
             Big Cartel has created a beautiful homepage, that includes still images and video. It is casual, yet clean and professional, and everything is very easy to locate. 
@@ -59,7 +59,7 @@ position: absolute;
     <div>
         <h3>2. Bad Typography</h3>        
         <a href="http://www.roverp6cars.com/">
-            <img src="iml300_storm_mostupdated/storm_web/iml300/images/bad_textography.png "alt="bad typography">
+            <img src="../images/bad_typography.png"alt="bad typography" style="width:800px" "height:800px">
         </a>
         <p>
             MGBD Parts and Services website is just ugly. It has weird flashing captions, and an annoying font. It makes their website look cheap and ugly. 
