updates on dream site

--- a/storm_web/index.html
+++ b/storm_web/index.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <style>
 body,h1,h2{font-family: "Raleway", sans-serif, }
+   
 body, html {height: 100%}
 p {line-height: 2}
 .bgimg{
@@ -15,19 +16,21 @@ p {line-height: 2}
 }
     .bgimg2 {
         min-height: 100%;
-    background-position:center;  
+    background-position:center center;  
     }
 
     
 </style>
 <body>
-<body background= "assignments/patterns.jpg"
-    background-position: 200% 100%;
+<body background= "assignments/patterns3.jpg"
+    background-position: center;
+    
 >
 
+
 <!-- Header / Home-->
-<header class="w3-display-container w3-wide bgimg w3-grayscale-min" id="home">
-  <div class="w3-display-middle w3-text-white w3-center">
+<header class="w3-display-container w3-wide bgimg w3-grayscale-min"id="home">
+  <div class="w3-display-middle w3-text-pink w3-center">
     <h1 class="w3-jumbo">Noelle Brimble</h1>
     <h2>University of Southern California</h2>
     <h2><b>IML 300</b></h2>
