lots of concert updates

--- a/storm_web/Dream Concert/information.html
+++ b/storm_web/Dream Concert/information.html
@@ -4,28 +4,16 @@
 <title> Information
 </title>
 
-<style>
-   
-     h1 {
-       color:#f44271;
-        text-align: center;
-            
-    }
-    body {
-        background-color: black;
-        
-    }
- p {
-        font-size: 20px;
-       color: white;
-    }
-    </style>
+   <link rel="stylesheet" type="text/css" href="dreamconcert.css">
+<link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet">
+   <head/>
+
    
 
 <body>
 
  
-<h1>  MORE INFO 
+<h1>  More Info
    </h1>
 
   <p>
