--- a/storm_web/Dream Concert/mia.html
+++ b/storm_web/Dream Concert/mia.html
@@ -4,22 +4,50 @@
 <title> About MIA
 </title>
 
-<style>
-   h1 {
-       color:#F012BE;
-         text-align: center;}
-    </style>
+<link rel="stylesheet" type="text/css" href="dreamconcert.css">
+<link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet">
 </head>
 
 <body>
 
 <h1> ABOUT M.I.A. </h1>
 
+<a>
+            <img src="images/mia_portrait.jpg"  style="width: 600px" "height:50px" align="middle">
+            
+        </a>
 
 <p> Mathangi "Maya" Arulpragasam (born 18 July 1975), better known by her stage name M.I.A., is a British rapper, singer-songwriter, record producer, director, visual artist, activist, photographer, fashion designer and model. "M.I.A." is a play on her own name and a reference to the acronym of Missing in Action. Her compositions combine elements of alternative, dance, electronic, hip hop and world music. M.I.A. began her career in 2000 as a visual artist, filmmaker and designer in west London before beginning her recording career in 2002. Since rising to prominence in early 2004 for her singles "Sunshowers" and "Galang", charting in Canada and the UK and reaching number 11 on the Billboard Hot Dance Singles Sales in the US, she has been nominated for an Academy Award, three Grammy Awards and the Mercury Prize.
 </p>
+   <p2>
+    Why We Chose Her
+</p2>
+<br>
+<br>
+<p3>
+    A refugee herself, M.I.A. now uses her voice to represent refugees during "a time when war is the most invested thing on the planet." Through fast beats and popping words, M.I.A. strives to make every refugee kid have something to feel good about. Especially when it comes to rights. Many of her songs serve as propoganda for better treatment, wages, and political equality for immigrants, and it has started a movement. This Sri Lankan girl is not afraid to put up a fight for the rights of those who are overlooked.  
+</p3>
+   <div>
+ <ul>
 
+  <li><a class="active" href="https://www.youtube.com/watch?v=r-Nw7HbaeWY">Check Out M.I.A.'s Boarders Video</a></li>
+  
+  <ul/>  <div/>
 
 
     </body>
+    
+    <style>
+       h1{
+            font-size: 35px;
+            color: #f44271;
+        }
+       h2{
+           color: gray;
+           text-align: left;
+           padding:0%;}
+        p{
+           color:white;
+       }
+    </style>
 </html>
