--- a/storm_web/Dream Concert/tickets.html
+++ b/storm_web/Dream Concert/tickets.html
@@ -4,24 +4,9 @@
 <title> Tickets 
 </title>
 
-<style>
+<link rel="stylesheet" type="text/css" href="dreamconcert.css">
+<link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet">
    
-     h1 {
-       color:#f44271;
-        text-align: center;
-            
-    }
-    body {
-        background-color: black;
-        
-    }
- p {
-        font-size: 20px;
-       color: white;
-    }
-    </style>
-   
-
 <body>
 
  
